# Tightbeam

./: Cargo.toml  README.md
tightbeam-common/: Cargo.toml
tightbeam-common/src/types/: mod.rs  skyfall.rs
tightbeam-desktop/: package.json
tightbeam-desktop/src-tauri/: Cargo.toml  tauri.conf.json
tightbeam-desktop/src-tauri/src/: lib.rs  main.rs
tightbeam-desktop/src/lang/: en.json
