[workspace]
resolver = "3"
members = ["tightbeam-common", "tightbeam-desktop/src-tauri"]

[workspace.dependencies]
async-trait = "0.1.88"
libskyfall = "0.1.0"
serde = "1.0.219"
serde_json = "1.0.140"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri = "2.6.2"
tauri-build = "2.3.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-zustand = "0.3"
taurpc = "0.5.1"
tokio = "1"
