[package]
name = "tightbeam-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tightbeam_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = {workspace = true}

[dependencies]
tauri-plugin-fs = { workspace = true }
tauri-plugin-persisted-scope = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-zustand = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
taurpc = { workspace = true }
specta = { workspace = true, features = ["derive"] }
specta-typescript = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tauri = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
tauri-build = { workspace = true }
libskyfall = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

